--- a/my_projects/No.9/index.css
+++ b/my_projects/No.9/index.css
@@ -7,46 +7,48 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
+img {
+  max-width: 100%;
+  width: 100%;
+}
 body {
     background-color: hsl(36, 100%, 99%);
     width: 100vw;
     height: 100vh;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    /* text-align: center; */
+    /* margin: 0 auto; */
+}
+.container {
+    max-width: 1440px;
     margin: 0 auto;
+    padding: 0 164px;
 }
 /* head_part */
 .head {
     display: flex;
     align-items: center;
-    /* flex:0.1 auto; */
-    padding: 30px 164px;
-    width: 100%;
-    height: 10vh;
-}
-.icon {
-    background-image: url(/assets/images/logo.svg);
-    background-size: 100% 100%;
-    background-repeat: none;
-    background-position: center;
-    height: 45px;
-    width: 66px;
-    /* width:6%;
-    height:100%; */
-    margin-right: auto;
+    padding: 30px 0;
+    justify-content: space-between;
+    /* width: 100%; */
+    margin-top: 40px;
+    /* height: 10vh; */
 }
 .navigation ul {
     display: flex;
     justify-content: space-between;
-    width: 436px;
+    /* width: 436px; */
     /* width: 40%; */
 }
 
 .navigation ul li {
+    margin-left: 40px;
     list-style-type: none;
-    font-size: 18px;
+    font-size: 16px;
     color: hsl(236, 13%, 42%);
-    font-family: 'Inter',sans-serif;
     /* margin: 0 19px; */
+    cursor: pointer;
 }
 .navigation ul li:hover {
     color: hsl(5, 85%, 63%);
@@ -55,91 +57,70 @@ body {
 /* main_part */
 .main {
     width: 100%;
-    padding:0 164px;
+    /* padding:0 164px; */
     display: flex;
-    height: 55vh;
+    /* height: 55vh; */
 }
 
 .left_part {
-    /* width: 730px; */
-    /* margin-right: 30px; */
-    /* flex-grow:1.5; */
-    width: 70%;
-    height: 100%;
-    /* flex: 6; */
-    margin-right: auto;
-}
-.main_pic {
-    height: 55%;
-    width: 100%;
-    /* width: 730px; */
-    background-image: url(/assets/images/image-web-3-desktop.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    max-width: 730px;
+    margin-right: 30px;
 }
 .main_news {
     /* width:100%; */
     width: 100%;
     display: flex;
     text-align: left;
+    margin-top: 37px;
 }
-/* .main_news>* {
-    flex: 1;
-} */
+.main_news>*{
+    flex:1;
+}
 .main_news h1 {
-    width: 48%;
-    padding:45px 88px 0px 0px;
     color: hsl(240, 100%, 5%);
-    font-size: 55px;
+    font-size: 50px;
     font-weight: 800;
-    /* margin-right: 95px; */
-
 }
 .main_content {
-    padding: 45px 40px 0px 0px;
-    width: 52%;
+    padding: 0 16px;
 }
 .main_content p {
-    font-size: 18px;
+    font-size: 15px;
     color:hsl(236, 13%, 42%);
-    margin-bottom: 68px;
-    line-height: 1.5;
+    margin-bottom: 40px;
+    line-height: 1.8;
 }
 .main_content button {
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 400;
-    width: 183px;
+    width: 184px;
     color: hsl(36, 100%, 99%);
     height: 48px;
+    outline: none;
     border: none;
     background-color: hsl(5, 85%, 63%);
     letter-spacing: 3px;
+    cursor: pointer;
 }
 .main_content button:hover {
     background-color: hsl(240, 100%, 5%);
 }
-
+/* rigth-part */
 .right_part {
-    /* width: 346px; */
-    width: 28%;
-    height: 100%;
-    /* flex-grow: 1; */
-    /* flex: 4; */
+    max-width: 350px;
+    /* height: 100%; */
     text-align: left;
-    padding: 30px 25px ;
+    padding: 37px 25px 0px 25px;
     background-color: hsl(240, 100%, 5%);
-    overflow: hidden;
 }
 .right_part h1 {
     color: hsl(35, 77%, 62%);
-    /* margin-bottom: 10px; */
     font-size: 40px;
-    /* margin-bottom: 60px; */
+    /* margin-bottom: 40px; */
 }
 .side_news {
-    padding-bottom: 33px;
-    margin-top: 25px;
+    padding: 34px 0; 
+    /* margin-top: 25px; */
     border-bottom: solid hsl(233, 8%, 79%);
 }
 .side_news.no-border {
@@ -160,34 +141,31 @@ body {
 /* foot_part */
 .foot {
     display: flex;
-    width: 100%;
-    padding: 0 164px;
-    margin-top: 72px;
-    justify-content: space-around;
-    /* justify-content: center; */
+    margin-top: 70px;
+}
+.foot>*{
+    flex: 1;
 }
 .foot_news {
     display: flex;
-    padding: 0 20px;
 }
 .foot_pic {
-    height: 100%;
-    width: 130px;
+    max-width: 98px;
+    height: 130px;
 }
 .foot_news_content {
     text-align: left;
-    padding: 10px 20px;
+    padding: 0px 27px;
 }
 .foot_news_content h2 {
     color: hsl(233, 8%, 79%);
-    margin-bottom: 20px;
     font-size: 28px;
 }
 .foot_news_content h6 {
     color: hsl(240, 100%, 5%);
-    font-size: 16px;
-    margin-bottom: 20px;
-    font-weight: 700;
+    padding: 16px 0;
+    font-size: 18px;
+    font-weight: bold;
 }
 .foot_news_content h6:hover {
     color: hsl(5, 85%, 63%);
@@ -195,22 +173,4 @@ body {
 .foot_news_content p {
     color: hsl(236, 13%, 42%);
     font-size:15px;
-}
-.foot_pic.one {
-    background-image:url(/assets/images/image-retro-pcs.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-.foot_pic.two {
-    background-image: url(/assets/images/image-top-laptops.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-.foot_pic.three {
-    background-image: url(/assets/images/image-gaming-growth.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
 }
